[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/roblox_death.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0312

[node name="Player" type="KinematicBody2D"]
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BombCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombCheck"]
shape = SubResource( 2 )

[node name="BlastCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastCheck"]
shape = SubResource( 2 )

[node name="BonusCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusCheck"]
shape = SubResource( 2 )

[node name="BombDelay" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_shape_entered" from="BombCheck" to="." method="_on_BombCheck_area_shape_entered"]
[connection signal="area_shape_exited" from="BombCheck" to="." method="_on_BombCheck_area_shape_exited"]
[connection signal="area_shape_entered" from="BlastCheck" to="." method="_on_BlastCheck_area_shape_entered"]
[connection signal="area_shape_entered" from="BonusCheck" to="." method="_on_BonusCheck_area_shape_entered"]
[connection signal="timeout" from="BombDelay" to="." method="_on_BombDelay_timeout"]
